# fibrolog

./: LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  docs.md  feature.md  refactor.md
.github/docs/: fibrolog_api_context.md  fibrolog_app_documentation.md  llm-fastapi.md
.github/docs/llm/: pydantic_usage.md  translation_conventions.md
fibrolog-api/: .env.example  GEMINI.md  README.md  pyproject.toml
fibrolog-api/.gemini/: GEMINI.md
fibrolog-api/fibrolog_api/: app.py  database.py  models.py  schemas.py  security.py
fibrolog-api/fibrolog_api/routers/: auth.py  crises.py  pacientes.py  registros_diarios.py
fibrolog-api/fibrolog_api/schemas/: __init__.py  crise.py  paciente.py  registro_diario.py  token.py
fibrolog-api/migrations/: env.py
fibrolog-api/migrations/versions/: 1735e4287e0d_create_pacientes_table.py  1ba80f7b0e8d_create_table_paciente.py  2dd3ae881459_create_all_tables.py  35b3a959c514_add_email_password_and_updated_at_to_.py  99c816452f74_initial_schema.py  9cdcf4a9a285_add_default_to_created_at.py  ae093c37a4ab_add_profile_fields_to_paciente.py  fa36d9f4c0b6_update_registro_crise_model.py
fibrolog-api/tests/: conftest.py  test_app.py  test_auth.py  test_crises.py  test_pacientes.py  test_registros_diarios.py
fibrolog-app/: app.json  package-lock.json  package.json
fibrolog-app/.gemini/: GEMINI.md  llms-full.txt
fibrolog-app/Body-Map/design/: Body map. Head (areas 1, 2, 23, or 24); neck (areas 3 or 25), shoulders... - Download Scientific Diagram.url  Body-Map.psd
fibrolog-app/Body-Map/public/: body-map.html  body-script.js  body-style.css
fibrolog-app/app/(tabs)/: index.tsx
