[project]
name = "fibrolog-api"
version = "0.1.0"
description = ""
authors = [
    {name = "gustaaragao",email = "gustavohenriquearagaosilva@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "alembic (>=1.18.1,<2.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
taskipy = "^1.14.1"
ruff = "^0.14.14"

[tool.ruff]
line-length = 79 # O comprimento máximo de linha para 79 caracteres (sugestão do PEP-8)
extend-exclude = ['migrations'] # ‘migrations’ é uma pasta que o Alembic vai criar

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']

[tool.ruff.format]
preview = true
quote-style = 'single' # Altera as aspas duplas por aspas simples para strings

[tool.pytest.ini_options]
pythonpath = "."
addopts = '--cov=. -p no:warnings'
asyncio_default_fixture_loop_scope = 'function'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev fibrolog_api/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fibrolog_api -vv'
post_test = 'coverage html'
coverage = 'python -m http.server 8080 --directory htmlcov'